@@ -1,3 +1,11 @@
+2013-04-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
+
+	* data/rsg/agent/nao/nao_hetero.rsg: 
+	* plugin/soccer/agentstate/agentstate.h: 
+	* plugin/soccer/agentstate/agentstate.cpp: 
+	* plugin/soccer/agentstate/agentstate_c.cpp: 
+	- added robot type to agent state
+
 2012-11-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
 
 	* data/rsg/agent/nao/nao_hetero.rsg: 
